salesforce_sfdx/main/default/objects/Account/fields/Otter_Closed_Lost_Opportunities_Value__c.field-meta.xml
<CustomField>
    <fullName>Otter_Closed_Lost_Opportunities_Value__c</fullName>
    <description>Total value of closed lost opportunities</description>
    <inlineHelpText>Total value of closed lost opportunities</inlineHelpText>
    <label>Closed Lost Opportunities Value</label>
    <summarizedField>Opportunity.Amount</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>Closed Lost</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>