salesforce_sfdx/main/default/objects/Account/fields/Otter_Closed_Won_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Otter_Closed_Won_Opportunities__c</fullName>
    <description>Number of closed won opportunities</description>
    <inlineHelpText>Number of closed won opportunities</inlineHelpText>
    <label>Closed Won Opportunities</label>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>Closed Won</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>