salesforce_sfdx/main/default/objects/Account/fields/Otter_Open_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Otter_Open_Opportunities__c</fullName>
    <description>Number of open opportunities</description>
    <inlineHelpText>Number of open opportunities</inlineHelpText>
    <label>Open Opportunities</label>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>Qualification, Discovery, Proposal/Quote, Negotiation</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>