salesforce_sfdx/main/default/objects/Account/fields/Otter_Open_Opportunities_Value__c.field-meta.xml
<CustomField>
    <fullName>Otter_Open_Opportunities_Value__c</fullName>
    <description>Total value of open opportunities</description>
    <inlineHelpText>Total value of open opportunities</inlineHelpText>
    <label>Open Opportunities Value</label>
    <summarizedField>Opportunity.Amount</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>Qualification, Discovery, Proposal/Quote, Negotiation</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>