salesforce_sfdx/main/default/objects/Account/fields/Otter_Opportunity_Value_Win_Rate__c.field-meta.xml
<CustomField>
    <fullName>Otter_Opportunity_Value_Win_Rate__c</fullName>
    <description>Opportunity value win rate</description>
    <formula>Otter_Closed_Won_Opportunities_Value__c / (Otter_Closed_Won_Opportunities_Value__c + Otter_Closed_Lost_Opportunities_Value__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Opportunity value win rate</inlineHelpText>
    <label>Opportunity Value Win Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>