salesforce_sfdx/main/default/objects/Account/fields/Otter_Opportunity_Win_Rate__c.field-meta.xml
<CustomField>
    <fullName>Otter_Opportunity_Win_Rate__c</fullName>
    <description>Opportunity win rate</description>
    <formula>Otter_Closed_Won_Opportunities__c / (Otter_Closed_Won_Opportunities__c + Otter_Closed_Lost_Opportunities__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Opportunity win rate</inlineHelpText>
    <label>Opportunity Win Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>